--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   dio: ^4.0.6
   carousel_pro: ^1.0.0
   carousel_slider:
-  provider:
+  flutter_html: ^1.3.0
+  provider: ^4.3.3
   flutter:
     sdk: flutter
 
